[workspace]
members = [
    "pdf",
    "pdf_derive",
    "view",
    "render",
    "convert",
    "examples/read",
    "examples/text",
    "examples/names",
]
default-members = [
    "pdf",
    "pdf_derive",
]

# [patch."https://github.com/pdf-rs/font"]
# font = { path = "../font" }

# [patch."https://github.com/s3bk/pathfinder_view"]
# pathfinder_view = { path = "../pathfinder_view" }

# [patch."https://github.com/servo/pathfinder"]
# pathfinder_gl = { path = "../pathfinder/gl" }
# pathfinder_webgl = { path = "../pathfinder/webgl" }
# pathfinder_gpu = { path = "../pathfinder/gpu" }
# pathfinder_content = { path = "../pathfinder/content" }
# pathfinder_color = { path = "../pathfinder/color" }
# pathfinder_geometry = { path = "../pathfinder/geometry" }
# pathfinder_renderer = { path = "../pathfinder/renderer" }
# pathfinder_resources = { path = "../pathfinder/resources" }
# pathfinder_export = { path = "../pathfinder/export", features=["raster"] }
# pathfinder_simd = { path = "../pathfinder/simd"}

# [patch."https://github.com/s3bk/svg"]
# svg_dom = { path = "../svg/dom"}
# svg_draw = { path = "../svg/draw"}
