[package]
name = "pdf-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf = { path = "../pdf" }
datasize = "0.2.13"
clap = { version = "*", features = ["derive"] }
image = "*"

[[bin]]
name = "extract_page"
