[package]
name = "pdf-examples"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf = { path = "../pdf" }
datasize = "0.2.13"
clap = { version = "*", features = ["derive"] }
image = { version = "*", default-features = false, features = ["png", "jpeg"] }
qrcodegen = "*"
pdf_derive = { path = "../pdf_derive" }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
uuid = { version = "*", features = ["v4", "rng-getrandom"] }

[target.'cfg(target_arch="wasm32")'.dependencies]
uuid = { version = "*", features = ["v4", "js"] }


[[bin]]
name = "extract_page"
