[package]
name = "font"
version = "0.1.0"
authors = ["Sebastian Köln <sebk@rynx.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sfnt = "0.12"
pathfinder_canvas = { git = "https://github.com/s3bk/pathfinder/", branch="local-skribo" }
pathfinder_export = { git = "https://github.com/s3bk/pathfinder/", branch="local-skribo" }
pathfinder_geometry = { git = "https://github.com/s3bk/pathfinder/", branch="local-skribo" }
stb_truetype = "0.2.2"
nom = "5.0"
log = "*"
env_logger = "*"
rand = "*"
slotmap = { version = "0.3", features = ["unstable"] }
tuple = "*"
decorum = "*"
itertools = "*"
istring = "*"
