[package]
name = "pdf"
version = "0.7.2"
authors = ["Erlend Langseth <3rlendhl@gmail.com>", "Sebastian Köln <s3bk@protonmail.com>"]
repository = "https://github.com/pdf-rs/pdf"
readme = "../README.md"
keywords = ["pdf"]
license = "MIT"
documentation = "https://docs.rs/pdf"
edition = "2018"
description = "PDF reader"

[features]
mmap = ["memmap2"]
dump = ["tempfile"]
threads = ["jpeg-decoder/default"]
sync = []

[dependencies]
pdf_derive = { version = "0.1.22", path = "../pdf_derive" }
snafu = "0.6.10"
inflate = "0.4.5"
deflate = "0.9.0"
itertools = "0.10.0"
memmap2 = { version = "0.5.0", optional = true }
weezl = "0.1.4"
chrono = "0.4.19"
once_cell = "1.5.2"
log = "0.4.14"
tempfile = { version = "3.2.0", optional = true }
md5 = "0.7"
jpeg-decoder = { version = "0.1", default-features = false }
aes = "0.7.5"
block-modes = "0.8.1"
stringprep = "0.1.2"
sha2 = "0.9.2"
fax = "0.2.0"
euclid = { version = "0.22.6", optional = true }
bitflags = "1.3"
istring = { version = "0.3.1", git = "https://github.com/s3bk/istring", features = ["std", "size"] }
datasize = "*"
cachelib = { version = "0.2", git = "https://github.com/s3bk/cachelib" }


[dev-dependencies]
glob = "0.3.0"

[lib]
doctest = false

[[example]]
name = "content"

[[example]]
name = "metadata"

[[example]]
name = "names"

[[example]]
name = "read"
