[package]
name = "pdf"
version = "0.9.0"
authors = ["Erlend Langseth <3rlendhl@gmail.com>", "Sebastian Köln <s3bk@protonmail.com>"]
repository = "https://github.com/pdf-rs/pdf"
readme = "../README.md"
keywords = ["pdf"]
license = "MIT"
documentation = "https://docs.rs/pdf"
edition = "2018"
description = "PDF reader"

[features]
mmap = ["memmap2"]
dump = ["tempfile"]
threads = ["jpeg-decoder/default"]
sync = []
cache = ["globalcache"]
default = ["sync", "cache"]

[dependencies]
pdf_derive = { version = "0.2.0", path = "../pdf_derive" }
snafu = "0.8.3"
libflate = "2.0.0"
deflate = "1.0.0"
itertools = "0.13.0"
memmap2 = { version = "0.9.4", optional = true }
weezl = "0.1.4"
once_cell = "1.5.2"
log = "0.4.14"
tempfile = { version = "3.2.0", optional = true }
md5 = "0.7"
jpeg-decoder = { version = "0.3.0", default-features = false }
aes = "0.8.2"
cbc = "0.1"
stringprep = "0.1.2"
sha2 = "0.10.2"
fax = "0.2.0"
euclid = { version = "0.22.7", optional = true }
bitflags = "2.5"
istring = { version = "0.3.3", features = ["std", "size"] }
datasize = "0.2.13"
globalcache = { version = "0.2.3", features = ["sync"], optional = true }
indexmap = "2.1.0"

[dev-dependencies]
glob = "0.3.0"

[lib]
doctest = false

[[example]]
name = "content"

[[example]]
name = "metadata"

[[example]]
name = "names"

[[example]]
name = "read"

[[example]]
name = "other_page_content"
