[package]
name = "pdf_derive"
version = "0.2.0"
authors = ["Erlend Langseth <3rlendhl@gmail.com>", "Sebastian Köln <s3bk@protonmail.com>"]
homepage = "https://github.com/pdf-rs"
repository = "https://github.com/pdf-rs/pdf_derive"
description = "helper for pdf-rs."
license = "MIT"
edition = "2018"

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.24"
quote = "1"

[lib]
proc-macro = true
