[package]
name = "pdf_render"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

[features]
unstable = ["font/unstable"]

[dependencies]
log = "0.4.8"
pdf = { path = "../pdf", default-features=false }
font = { git = "https://github.com/pdf-rs/font/" }
encoding = { git = "https://github.com/pdf-rs/encoding/" }
itertools = "*"

pathfinder_geometry = { git = "https://github.com/servo/pathfinder/" }
pathfinder_content = { git = "https://github.com/servo/pathfinder/" }
pathfinder_color = { git = "https://github.com/servo/pathfinder/" }
pathfinder_renderer = { git = "https://github.com/servo/pathfinder/" }
