[package]
name = "pdf_render"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

[features]
unstable = ["font/unstable"]

[dependencies]
log = "0.4.8"
pdf = { path = "../pdf", default-features=false }
font = { git = "https://github.com/pdf-rs/font/" }
pdf_encoding = "0.1.0"
itertools = "0.9.0"

pathfinder_geometry = { git = "https://github.com/servo/pathfinder/" }
pathfinder_content = { git = "https://github.com/servo/pathfinder/" }
pathfinder_color = { git = "https://github.com/servo/pathfinder/" }
pathfinder_renderer = { git = "https://github.com/servo/pathfinder/" }
#phf = { features = ["macros"], path = "../../rust-phf/phf" }
#phf_shared = { path = "../../rust-phf/phf_shared" }

timed = "0.2.1"