[package]
name = "pdf_view"
version = "0.1.0"
authors = ["Sebastian Köln <sebk@rynx.org>"]
edition = "2018"
[features]
unstable = ["pdf_render/unstable"]

[dependencies]
pdf = { path = "../pdf", default-features=false }
pdf_render = { path = "../render" }
pathfinder_renderer = { git = "https://github.com/s3bk/pathfinder" }
pathfinder_geometry = { git = "https://github.com/s3bk/pathfinder" }
pathfinder_export = { git = "https://github.com/s3bk/pathfinder" }
pathfinder_view = { git = "https://github.com/s3bk/pathfinder_view" }
log = "0.4.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.48"
js-sys = "*"
web-sys = { version = "*", features = ["HtmlCanvasElement"] }
console_log = "*"
console_error_panic_hook = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pdf = { path = "../pdf", features=["mmap", "dump"] }
pathfinder_view = { git = "https://github.com/s3bk/pathfinder_view" }
env_logger = "*"

[[bin]]
name = "pdf_view"

[[bin]]
name = "pdf2svg"

[[bin]]
name = "render"

[lib]
crate-type = ["cdylib", "rlib"]