[package]
name = "pdf_view"
version = "0.1.0"
authors = ["Sebastian Köln <s3bk@protonmail.com>"]
edition = "2018"

[features]
unstable = ["pdf_render/unstable"]

[dependencies]
pdf = { path = "../pdf", default-features=false }
pdf_render = { path = "../render" }
pathfinder_renderer = { git = "https://github.com/servo/pathfinder" }
pathfinder_color = { git = "https://github.com/servo/pathfinder" }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder" }
pathfinder_resources = { git = "https://github.com/servo/pathfinder" }
pathfinder_view = { git = "https://github.com/s3bk/pathfinder_view" }
pathfinder_export = { git = "https://github.com/servo/pathfinder" }
log = "0.4.8"
structopt = "*"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.48"
js-sys = "*"
web-sys = { version = "*", features = ["HtmlCanvasElement"] }
console_log = "*"
console_error_panic_hook = "*"

[target.x86_64-unknown-linux-gnu.dependencies]
#pdf = { path = "../pdf", features=["mmap", "dump"] }
env_logger = "*"

[lib]
crate-type = ["cdylib", "rlib"]